sidebar design done but responsive is remaining

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,9 @@
 
 .AppContainer{
   display: grid;
-  grid-template-columns: auto auto ;
+  grid-template-columns: 16rem auto;
+}
+
+.Content{
+  margin-left: 20px;
 }
